2011-02-04  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/generator/staticGen.cpp: Comment out generate dlv command
	lines for now.

	* src/dmcs/OptDMCS.cpp: Comment out all_masked for now.
	* src/dmcs/PrimitiveDMCS.cpp: Likewise.

	* src/dmcs/BeliefCombination.cpp: Move assertion to if condition.

	* include/mcs/BeliefState.h: Generate maxBeliefSet wrt some
	range. Convert BeliefState output format to be compatible with
	operator>>.
	* src/generator/ContextGenerator.cpp: Likewise.

	* include/generator/OptTopologyGenerator.h: Add putInterface.

	* include/generator/DiamondOptTopoGenerator.h: Fix opt-diamond generator.

2011-02-03  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/run-streaming.sh: Add runner scripts.
	* examples/run-opt.sh: Likewise.

2011-02-03  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Fix output projection.

	* include/solver/RelSatSolver.h: Add refresh.
	* src/network/RelSatSolverThread.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/dmcs/QueryPlan.h: Setup meta_neighbors.
	* src/dmcs/QueryPlan.cpp: Likewise.

	* include/dmcs/Neighbor.h: Add vector of NeighborList.

	* src/dmcs/StreamingDMCS.cpp: Get neighbors from query_plan.
	* src/network/ThreadFactory.cpp: Likewise.
	* include/network/ThreadFactory.h: Likewise.

	* src/solver/RelSatSolver.cpp: Do nothing when trail is empty. The
	outer loop takes care of sending NULL to OUT_MQ.

	* src/dmcs/StreamingDMCS.cpp: Check for NULL pointer.

	* include/dmcs/CommandTypeFactory.h: Add conflicts_driven related stuff.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/JoinThread.h: Likewise.
	* include/dmcs/StreamingDMCS.h: Likewise.
